# credits/src/main/java/com/project/credits/delegate/ClientDelegate.java
@@ -1,8 +1,10 @@
 package com.project.credits.delegate;
 
 import com.project.credits.api.ClientsApiDelegate;
+import com.project.credits.model.CreditRes;
 import com.project.credits.model.ExistClientCreditCardRes;
 import com.project.credits.service.ClientService;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 
@@ -16,6 +18,11 @@ public class ClientDelegate implements ClientsApiDelegate {
   @Autowired
   public ClientDelegate(ClientService clientService) {
     this.clientService = clientService;
+  }
+
+  @Override
+  public ResponseEntity<List<CreditRes>> getClientCredits(String clientId) {
+    return ResponseEntity.ok(clientService.getClientCredits(clientId));
   }
 
   @Override
