# reports/src/main/java/com/project/reports/delegate/ReportDelegate.java
@@ -1,0 +1,21 @@
+package com.project.reports.delegate;
+
+import com.project.reports.api.ReportsApiDelegate;
+import com.project.reports.model.ReportProductSummaryRes;
+import java.util.List;
+import org.springframework.http.ResponseEntity;
+
+/**
+ * Implements ReportsApiDelegate.
+ */
+public class ReportDelegate implements ReportsApiDelegate {
+
+  @Override
+  public ResponseEntity<List<ReportProductSummaryRes>> getClientProductsSummary(
+      String clientId,
+      Integer year,
+      Integer month
+  ) {
+    return ReportsApiDelegate.super.getClientProductsSummary(clientId, year, month);
+  }
+}
